--- a/README
+++ b/README
@@ -6,7 +6,7 @@ Game: Heart of the Gods
 
 In this game you embark on the river Styx to defend the Heart of the Gods from the endless, hungry navy of the Underworld.
 
-Controls: Arrows/WAD to pilot vessel.  Spacebar to upgrade.
+Controls: Arrows/WAD to pilot vessel.  Shift to boost.  1,2,3 to spend supplies.
 
 Development
 
