--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 js13k2022 Competition Entry
 
+[Play here!](https://benjamin-t-brown.github.io/hotg/index.html)
+
 Theme: DEATH
 
 Game: Heart of the Gods
